fix: rimozione gap tra clases e workshops

--- a/css/style.css
+++ b/css/style.css
@@ -1733,10 +1733,10 @@ p {
 }
 
 #clases {
-  padding-bottom: 0;
+  padding-bottom: 0 !important;
 }
 
 #workshops {
-  padding-top: 48px;
+  padding-top: 32px;
   padding-bottom: 48px;
 }
